--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -4,12 +4,13 @@
 
 body{
     font-family: 'Inter', sans-serif;
+   
 }
 
-.loading-container{
+/* .loading-container{
     width:100%;
     height:80%;
     display: flex;
     justify-content: center;
     align-items: center;
-}
+} */
